update author footnotes

--- a/Case Study 1/CS1_report.tex
+++ b/Case Study 1/CS1_report.tex
@@ -71,13 +71,13 @@
 \posttitle{\end{center}} % Article title closing formatting
 \title{Critical Temperature in Superconductors} % Article title
 \author{%
-\textsc{Richard Kim}\thanks{Corresponding author} \\[1ex] % Your name
+\textsc{Richard Kim}\\[1ex] % Your name
 \normalsize Southern Methodist University \\ % Your institution
 \and % Uncomment if 2 authors are required, duplicate these 4 lines if more
-\textsc{Hien Lam}\thanks{Corresponding Author} \\[1ex] % Your name
+\textsc{Hien Lam} \\[1ex] % Your name
 \normalsize Southern Methodist University \\ % Your institution
 \and % Uncomment if 2 authors are required, duplicate these 4 lines if more
-\textsc{Joaquin Dominguez}\thanks{Corresponding Author} \\[1ex] % Your name
+\textsc{Joaquin Dominguez} \\[1ex] % Your name
 \normalsize Southern Methodist University \\ % Your institution
 %\normalsize University of Utah \\ % Second author's institution
 %\normalsize \href{mailto:jane@smith.com}{jane@smith.com} % Second author's email address
