--- a/Case Study 1/Critical Temperature in Superconductor_V2.ipynb
+++ b/Case Study 1/Critical Temperature in Superconductor_V2.ipynb
@@ -36,7 +36,7 @@
     "## Modeling\n",
     "As stated above, we would like to predict the critical temperature of a superconductor using linear regression with regularization, then investigate the important features. Specifically, lasso and ridge regularization were explored. Lasso regularization (L1) is commonly used for variable selection because it induces sparsity with the coefficients. As the value of lambda increases and consequently increases the penalty, coefficients of variables with weaker contributions are forced to 0. Variables that are allowed to retain a non-zero value can then be identified as important variables. In contrast, Ridge Regularization (L2) is more commonly used to prevent overfitting. L2 is different from L1 regularization in that it does not induce sparsity but rather applies the penalty more uniformly. The result is the full list of coefficients, where all of the variables are inhibited in their growth and none of the variables are forced to 0. \n",
     "\n",
-    "Given our goal to investigate feature importance, an L1 model does make more conceptual sense. Nonetheless, we proceed by creating both models. We utilized Scikit-Learn’s <i>pipeline</i> class to set up the gridsearch workflow, lasso and ridge classes to train the models, gridsearchcv class to execute the search and refit the best performing model and cross_validate class to ascertain their mean RMSE from five-fold, shuffled internal cross validation. We tuned lasso’s alpha to be between 0.1-10 with 200 samples and ridge’s alpha to be 0.1-100 with 300 samples. The feature importance was extracted from the best model of each algorithm and its values transformed to the absolute root because we care about the magnitude of the coefficients, not the sign of the coefficient."
+    "Given our goal to investigate feature importance, an L1 model does make more conceptual sense. Nonetheless, we proceed by creating both models. We utilized Scikit-Learn’s <i>pipeline</i> class to set up the gridsearch workflow, <i>lasso</i> and <i>ridge</i> classes to train the models, <i>gridsearchcv</i> class to execute the hyperparameter search then refit the best performing model and <i>cross_validate</i> class to ascertain their mean RMSE from five-fold, shuffled internal cross validation. The feature importance was extracted from the best model of each algorithm and its values transformed to the absolute root because we care about the magnitude of the coefficients, not the sign of the coefficient."
    ]
   },
   {
@@ -49,7 +49,7 @@
     "# Results\n",
     "\n",
     "## Regularization\n",
-    "Displayed below is a table of the optimal alpha from each model and their respective five-fold cross validation metrics.  \n",
+    "We conducted a lasso and ridge gridsearch with hyperparameter tuning. Lasso’s alpha was set to be between 0.1-10 with 200 samples and ridge’s alpha to be 0.1-100 with 300 samples. Displayed below is a table of the optimal alpha from each model and their respective five-fold cross validation metrics.  \n",
     "\n",
     "|   | Lasso | Ridge |\n",
     "| :- | -: | :-: |\n",
@@ -88,7 +88,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -103,6 +103,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
