--- a/Case Study 2/JD_draft.ipynb
+++ b/Case Study 2/JD_draft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1416,7 +1416,7 @@
        "19         NO  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1524,26 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean : 165201645.6229782\n",
-      "Min : 12522\n",
-      "Max : 443867222\n"
-     ]
-    }
-   ],
-   "source": [
-    "range(diabetes['encounter_id'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1660,7 +1641,7 @@
        "        <AxesSubplot:>, <AxesSubplot:>, <AxesSubplot:>]], dtype=object)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1681,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1677,7 @@
        "Name: race, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1707,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1716,7 +1697,7 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1727,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1795,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2106,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2165,7 +2146,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2176,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2185,7 +2166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2205,7 +2186,7 @@
        "Name: race, Length: 101766, dtype: bool"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2216,7 +2197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2275,7 +2256,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2286,26 +2267,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create copy to keep original dataset without manipulation\n",
     "db_2 = diabetes.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# missing values are displayed with a '?', so replace with Nan, which pandas can identify as a missing value\n",
     "for i in db_2.columns:\n",
     "    db_2[i].mask(db_2[i] == '?', np.nan, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2364,18 +2347,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 7 columns with missing values\n",
     "db_2.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2397,6 +2381,186 @@
     "db_2.drop(columns=single_vals, inplace=True)\n",
     "print(f\"Final data dim after dropping aforementioned columns: {db_2.shape}\")\n",
     "print(f\"There are {db_2.isna().sum().sum()} NA values and {db_2.duplicated().sum()} duplicated records\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train/test split before imputing missing values\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "train, test = train_test_split(db_2, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimensions of train: (81412, 48)\n",
+      "Dimenstions of test: (20354, 48)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dimensions after 80/20 train/test split\n",
+    "print(f'Dimensions of train: {train.shape}')\n",
+    "print(f'Dimenstions of test: {test.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1824"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train['race'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns with missing values:\n",
+      "race : 1824\n",
+      "weight : 78852\n",
+      "payer_code : 32135\n",
+      "medical_specialty : 39969\n",
+      "diag_1 : 17\n",
+      "diag_2 : 271\n",
+      "diag_3 : 1131\n"
+     ]
+    }
+   ],
+   "source": [
+    "# specific columns with missing values\n",
+    "# a bit concerned about weight, payer_code, and medical_specialty given the amount of missing values. might not be worth imputing?\n",
+    "print(f'Columns with missing values:')\n",
+    "miss_val_col = []\n",
+    "for i in train.columns:\n",
+    "    val = train[i].isna().sum()\n",
+    "    if val > 0:\n",
+    "        print(f'{i} : {val}')\n",
+    "        miss_val_col.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['race', 'weight', 'payer_code', 'medical_specialty', 'diag_1', 'diag_2', 'diag_3']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(miss_val_col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object\n",
+      "object\n",
+      "object\n",
+      "object\n",
+      "object\n",
+      "object\n",
+      "object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# since all missing value columns are categorical, we can try imputing with the mode first\n",
+    "for i in miss_val_col:\n",
+    "    val = train[i].dtypes\n",
+    "    print(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'InternalMedicine'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train['medical_specialty'].mode()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create copies of train,test to impute with mode of each var\n",
+    "test_mode = test.copy()\n",
+    "train_mode = train.copy()\n",
+    "for i in miss_val_col:\n",
+    "    train_mode[i] = train_mode[i].fillna(train_mode[i].mode()[0])\n",
+    "    test_mode[i] = test_mode[i].fillna(train_mode[i].mode()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_mode.isna().sum().sum()"
    ]
   },
   {
