final edit + latex pdf

--- a/Case Study 2/CS2_Final.ipynb
+++ b/Case Study 2/CS2_Final.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1><center>Case Study 2:</center></h1>\n",
+    "<h2><center>Diabetes Dataset</center></h2>\n",
+    "<h3>Authors:</h3>\n",
+    "Joaquin Dominguez <br>\n",
+    "Richard Kim <br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -5523,7 +5534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Regression"
+    "Regression Imputation"
    ]
   },
   {
@@ -5636,7 +5647,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mode"
+    "Mode Imputation"
    ]
   },
   {
